--- a/eth-contract/foundry.toml
+++ b/eth-contract/foundry.toml
@@ -3,4 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+# Base Sepolia testnet configuration
+[rpc_endpoints]
+base_sepolia = "https://sepolia.base.org"
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
