--- a/stack-contract/package.json
+++ b/stack-contract/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "stack-yield-tests",
   "version": "1.0.0",
@@ -14,10 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "@hirosystems/clarinet-sdk": "^3.6.0",
-    "@types/node": "^24.4.0",
     "@stacks/transactions": "^7.2.0",
     "chokidar-cli": "^3.0.0",
     "vitest": "^3.2.4",
     "vitest-environment-clarinet": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.10",
+    "@types/node-fetch": "^2.6.13",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
